objects/vlocity_cmt__ContextRule__c.object
<CustomObject>
    <description>DEPRECATED. Use Vlocity Entity Filters.</description>
    <fields>
        <fullName>vlocity_cmt__AdHocExpression__c</fullName>
        <label>Ad Hoc Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Expression__c</fullName>
        <label>Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FailureMessage__c</fullName>
        <label>Failure Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this context rule. Used to identify the context rule across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique context rule identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsFallBackRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this Rule is the fallback rule for parent ruleset. a fallback rule is the last rule to be executed in a ruleset ,if all other rules fail</description>
        <label>IsFallBackRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsHeaderRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If TRUE, this rule  is the header rule for the parent ruleset.Header rule is the highest priority rule in a ruleset. if this SUCCEEDS ,no need to execute further rules.</description>
        <label>IsHeaderRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNegated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectApiName__c</fullName>
        <label>Object Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectId__c</fullName>
        <description>Object Id</description>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Object or Object Type</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Vlocity Context Rules</relationshipLabel>
        <relationshipName>ContextRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Ruleset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent ruleset</description>
        <label>Context Ruleset</label>
        <referenceTo>vlocity_cmt__ContextRuleset__c</referenceTo>
        <relationshipLabel>Vlocity Context Rules</relationshipLabel>
        <relationshipName>Vlocity_Context_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity Context Rule</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__FailureMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Context Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Context Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>